Change Readme and page title.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>reveal.js - The HTML Presentation Framework</title>
+		<title>MSP - Where we are</title>
 
 		<meta name="description" content="MSP presentation to Sunday Assembly">
 		<meta name="author" content="Tony Fawl & Harvinder Atwal">
